Push project and update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 ../*
+ADNI_Tau.xlsx
+ADNI_Tau_PHC.xlsx
+code-psyc221-final-project.pdf
+PSYC 221 Final Presentation.pptx
+Supplementary Data.docx
+initial_attempt.ipynb
+testing_env.ipynb
+Project Final Report 221.docx
